fixed navbar height issue on mobile, added maps to ContactPage

--- a/src/components/NavBar/responsive.scss
+++ b/src/components/NavBar/responsive.scss
@@ -4,6 +4,7 @@
 
     width: 100%;
     padding-left: 0;
+    height: unset;
 
     &__container {
       position: fixed;   
