--- a/src/components/WinesPage/responsive.scss
+++ b/src/components/WinesPage/responsive.scss
@@ -11,28 +11,28 @@
 
     }
 
-  &__controls ul {
+    &__controls ul {
 
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
 
-  }
+    }
 
-  &__controls li {
+    &__controls li {
 
-    width: 3.6rem;
-    height: 3.6rem;
-    
-  }
+      width: 3.6rem;
+      height: 3.6rem;
+      
+    }
 
-  &__controls li:before {
-    width: 1rem;
-    height: 1rem;
+    &__controls li:before {
+      width: 1rem;
+      height: 1rem;
 
-  }
+    }
   
     &__logo {
   
@@ -143,11 +143,6 @@
 @media only screen and (min-width: 481px) and (max-width: 850px) {
   
   .winespage {
-
-    &__controls {
-
-    width: 4rem;
-    }
 
     &__controls li {
   
